--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+        		<li><a href="/">home</a></li>
+	        	<li><a href="/about">about</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
+        		<li><a href="/blog">blog</a></li>
+        		<li><a href="/usefulthings">useful things</a></li>
+        		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hiya.</h1>
-				<p>I am a scientist, data scientist, and visualizer.<a href="/about">Read more about my life...</a></p>
+				<p>I am a scientist, data scientist, and visualizer. <a href="/about">about me...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
