--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Laura D. Hughes</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">home</a></li>
-	        	<li><a href="/about">about</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">blog</a></li>
-        		<li><a href="/usefulthings">useful things</a></li>
-        		</ul>
-		</nav>
-		<div class="container">
+---
+layout: default
+title: Laura D. Hughes
+---
     		<div class="blurb">
         		<h1>Hiya.</h1>
 				<p>I am a scientist, data scientist, and visualizer. <a href="/about">about me...</a></p>
     		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:laura.d.hughes@gmail.com">email</a></li>
-        		<li><a href="https://github.com/flaneuse">github.com/flaneuse</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
