--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Laura D. Hughes
 ---
     		<div class="blurb">
         		<h1>Hiya.</h1>
-				<p>I am a scientist, data scientist, and visualizer. <a href="/about">about me...</a></p>
+				<p>I am a scientist, data scientist, and visualizer. <a href="/projects">about me...</a></p>
     		</div><!-- /.blurb -->
