--- a/usefulthings/index.html
+++ b/usefulthings/index.html
@@ -3,6 +3,11 @@ layout: default
 title: useful things
 ---
 
-<h3>
+<h1>
 Links to useful things
-</h3>
+</h1>
+
+<h1>Color</h1>
+<p>I love color.  Here are a few of my favorite resources about color.
+
+* [Color Brewer](http://colorbrewer2.org/): the classic site for basic color palettes
