--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ layout: default
 
 <div class="home">
   <span class="body">
-    I'm a data scientist who works on interdisciplinary problems. Trained as a biophysical chemist, I love analyzing complicated data, figuring out what they mean, and how to visually communicate the results to others.
+    I'm a data scientist who works on interdisciplinary problems. Trained as a
+    biophysical chemist, I love analyzing complicated data, figuring out what
+    they mean, and deciding how to visually communicate the results to others.
   </span>
 
   <!-- Posts -->
