remove RSS feed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
 
 
 
-    <!-- RSS feed -->
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+    <!-- RSS feed
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
 
   </div>
