--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@ layout: default
 
 <div class="home">
   <span class="body">
-    I'm a data scientist who works on interdisciplinary problems. Trained as a
+    <p>I'm a data scientist who works on interdisciplinary problems. Trained as a
     biophysical chemist, I love analyzing complicated data, figuring out what
-    they mean, and deciding how to visually communicate the results to others.
+    they mean, and applying visualization principles to explore and communicate data.
+    </p>
+    <br/>
+
+    <p>
+      Currently an Institute Investigator at <a href="https://scripps.edu/faculty/hughes">Scripps Research</a>.
+      </p>
   </span>
 
   <!-- Loop over projects and resources -->
